# resume-agent

./: .gitignore  L1-withOllama.ipynb  L2-lcel-student.ipynb  L2-withOllama.ipynb  L3-Chains-withOllama.ipynb  L3-Chains.ipynb  L3-Ollama-function-calling-student.ipynb  L4-tagging-and-extraction-student.ipynb  L5-tools-routing-apis-student.ipynb  README.md
resume-agent/: .gitignore  README.md
resume-agent-backend/: Dockerfile
resume-agent-backend/app/: server.py
resume-agent-frontend/: Dockerfile  app.py  auth_functions.py  parsed.json  pyproject.toml
resume-agent/my-app/: README.md  client.ipynb  pyproject.toml  resume-agent.ipynb
resume-agent/my-app/app/: README.md  llm.py  server.py
resume-agent/streamlit_firebase_auth/: Dockerfile  README.md  app.py  play.ipynb  requirements.txt  resume.html
resume-agent/streamlit_firebase_auth/templates/: template.html  template.tex  template1.html  template2.html
resume-agent/streamlit_ui/: README.md  app.py  pyproject.toml
