[tool.poetry]
name = "streamlit-ui"
version = "0.1.0"
description = ""
authors = ["Joni <hangjoni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.35.0"
extra-streamlit-components = "^0.1.71"
firebase-admin = "^6.5.0"
email-validator = "^2.1.2"
pyjwt = "^2.8.0"
streamlit-pdf-viewer = "^0.0.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
